# projecto-final-j3ingineers

./: CMakeLists.txt  README.md  main.cpp
include/utec/agent/: EnvGym.h  PongAgent.h  PongAgentTrainable.h  State.h
include/utec/algebra/: tensor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
include/utec/thread/: ConcurrentQueue.h  ParallelExecutor.h  ThreadPool.h
src/utec/agent/: EnvGym.cpp  PongAgent.cpp
tests/: test_agent_env.cpp
